--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
 
 
         <div class="mt-80">
-            <img src="./public/images/nhahang.jpg">
+            <img src="./public/images/huan01.jpg">
         </div>
 
 
